# web/api/openapi.yaml
@@ -54,11 +54,15 @@ paths:
                 $ref: "#/components/schemas/Subject"
         "404":
           $ref: "#/components/responses/NotFound"
-  /api/v0/subjects/{id}/episodes:
+  /api/v0/episodes:
     get:
       tags: [动画]
       summary: 列出动画关联的剧集列表
-      parameters: [{ name: id, in: path, required: true, schema: { type: integer } }]
+      parameters:
+        - { name: subject_id, in: query, required: true, schema: { type: integer }, example: 51 }
+        - { name: type, in: query, schema: { type: integer, description: "0=本篇 1=SP 2=OP 3=ED 4=预告 5=MAD 6=其他" }, example: 0 }
+        - { name: limit, in: query, schema: { type: integer, maximum: 100, default: 100 } }
+        - { name: offset, in: query, schema: { type: integer, default: 0 } }
       responses:
         "200":
           description: 剧集数组
